fix: javadoc plugin upgrade to java 11