@@ -258,7 +258,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.4</version>
+                        <version>3.2.0</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -267,6 +267,14 @@
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <arg>--add-exports</arg>
+                            <arg>java.base/jdk.internal.math=io.questdb</arg>
+                            <additionalJOptions>
+                                <additionalJOption>--add-exports</additionalJOption>
+                                <additionalJOption>java.base/jdk.internal.math=io.questdb</additionalJOption>
+                            </additionalJOptions>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
